--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "RainXC/my-package",
+    "name": "rainxc/my-package",
     "description": "Just experiment",
     "keywords": ["closure", "serialization", "function", "serializable", "serialize", "anonymous functions"],
     "license": "MIT",
